# wiring

./: .flake8  .gitignore  .pylintrc  README.md  demo.py  do.txt  pyproject.toml  pytest.ini  requirements.txt
docs/: README.md  events.md  get-started.md  methods.md
flectrum/: __init__.py  bot_base.py  multi_platform_bot.py  to_multi_platform_converter.py
flectrum/errors/: bot_api_error.py  not_messageable_chat.py
src/: bot_base.py  logging_options.py  multi_platform_bot.py  multi_platform_resources.py  to_multi_platform_converter.py
src/errors/: action_not_supported.py  bot_api_error.py  not_messageable.py  not_messageable_chat.py
tests/: conftest.py  test_discord_bot_actions.py  test_telegram_bot_actions.py  test_twitch_bot_actions.py  unusable_bot_error.py
tests/errors/: missing_environment_variables_error.py  unusable_bot_error.py
tests/fixtures/: multi_platform_bot.py
wiring/: bot_base.py  multi_platform_bot.py  multi_platform_resources.py
