[tool.poetry]
name = "wiring"
version = "0.1.1"
authors = []
description = "package for building bots that run on multiple platforms, like discord and telegram"
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.8"
pylint = "^3.2.5"
black = "^24.4.2"
python-dotenv = "^1.0.1"

[tool.poetry.extras]
discord = ["discord.py"]
telegram = ["python-telegram-bot"]
twitch = ["twitchio"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
